k8s_production/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mafia-backend
  namespace: mafia
  labels:
    name: mafia-backend
    app: mafia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mafia
  template:
    metadata:
      labels:
        name: mafia-backend
        app: mafia
    spec:
      containers:
      - name: mafia-backend-container
        image: taleodor/mafia-express@sha256:7b01eb8ae124c5363f76b3ae5198e30ec2cad00504e9b7c4b27b2f617c9909bf
        ports:
        - containerPort: 3000
