k8s_production/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mafia-ui
  namespace: mafia
  labels:
    name: mafia-ui
    app: mafia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mafia
  template:
    metadata:
      labels:
        name: mafia-ui
        app: mafia
    spec:
      containers:
      - name: mafia-ui-container
        image: taleodor/mafia-vue@sha256:cb904dc3d01f804ce2bcb7f8afefe9cef85419da2389a831bdaffffe05809f1f
        ports:
        - containerPort: 80
